# incymo-backend

./: .gitignore  Dockerfile  Dockerfile_v2  README.rst  pyproject.toml  requirements.txt
deployment/: Chart.yaml  values.yaml
deployment/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deployment/templates/tests/: test-connection.yaml
incymo_backend/: enums.py  experiments.py  main.py
tests/: test_incymo_backend.py
